UtahLiveDataTest/src/objects/TeamingPartners__c.object
<CustomObject>
    <description>[Business] Object to store the Teaming partners for a Grant (Ramu to provide more detailed description)</description>
    <fields>
        <fullName>FundingOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Opportunity</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipLabel>Teaming Partners</relationshipLabel>
        <relationshipName>Teaming_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <formula>Partner__r.AccountName__c</formula>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Teaming Partners</relationshipLabel>
        <relationshipName>Teaming_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <label>Responsibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Teaming Partner</label>
    <nameField>
        <displayFormat>TMPNR-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teaming Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>